--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -13,7 +13,7 @@
     bottom: 0;
     overflow: hidden;
 }
-.pages-container .page {
+.pages-container > .page {
     position: absolute;
     top: 0;
     left: 0;
@@ -32,7 +32,7 @@
     transition: all 400ms ease;
 }
 
-.android-chrome .pages-container .page {
+.android-chrome .pages-container > .page {
     display: none;
     -webkit-transform: none;
     transform: none;
@@ -107,7 +107,7 @@
     .mobile {
         height: 1px;
     }
-    .pages-container .page {
+    .pages-container > .page {
         -webkit-transform: translate(0, 0);
         -moz-transform: translate(0, 0);
         -ms-transform: translate(0, 0);
@@ -360,7 +360,7 @@
     border-color: rgba(0,0,0,0.11);
 }
 .article-comments .comment {
-    padding: 0 15px 10px;
+    padding: 0 0 10px 15px;
     margin: -10px 0 0;
 }
 
@@ -400,12 +400,12 @@
 
 /* Comments page */
 .comments-list {
-    margin: 0;
+    margin: 0 15px 0 0;
     padding: 0;
     list-style: none;
 }
 .comments-list .comment {
-    padding: 8px 15px;
+    padding: 8px 0 8px 15px;
     border-top: 1px solid rgba(0,0,0,0.05);
 }
 .comments-list .comment-children {
@@ -416,7 +416,7 @@
 }
 .comments-list .comment-children .comment {
     padding-left: 8px;
-    padding-right: 8px;
+    padding-right: 0;
 }
 .comments-list .comment-children .comment-children {
     border-left-color: rgba(0,0,0,0.12);
@@ -526,7 +526,7 @@
     color: var(--theme-color);
 }
 .op-comment {
-    padding: 10px 15px;
+    padding: 10px 0 10px 15px;
     border-bottom: 1px solid rgba(0,0,0,0.1);
     background: rgba(0,0,0,0.02);
 }
